[gd_scene load_steps=2 format=3 uid="uid://cxtqkcmwro3i5"]

[ext_resource type="Script" path="res://Calculs/CalculationPopUp.gd" id="1_y51u1"]

[node name="CalculationPopUp" type="Window"]
initial_position = 2
size = Vector2i(800, 400)
script = ExtResource("1_y51u1")

[node name="lbl_question" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2

[node name="lbl_timer" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="txt_answer" type="LineEdit" parent="."]
custom_minimum_size = Vector2(300, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -15.5
offset_right = 150.0
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
text = "Entrer le r√©sultat ici"

[node name="btn_confirm" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -31.5
offset_top = -31.0
offset_right = 31.5
grow_horizontal = 2
grow_vertical = 0
text = "Valider
"

[node name="timer_countdown" type="Timer" parent="."]
